# pylibmspack

./: .dockerignore  .gitattributes  .gitignore  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: cflite_batch.yml  cflite_chm_corpus_compact.yml  cflite_cron.yml  cflite_pr.yml  ci.yml  release.yml  security.yml
fuzz/: Dockerfile  __init__.py  atheris_fuzzer.py  corpus.py  libmspack_fuzzer.c
fuzz/dictionaries/: all.dict  cab.dict  chm.dict  hlp.dict  kwaj.dict  oab.dict  oab_patch.dict  szdd.dict
scripts/: build_libfuzzer.py  build_libmspack.py  check_c_binding.py  check_native_static.py  check_parser_exposure.py  export_fuzz_artifacts.py  fuzz_smoke.py  generate_fixtures.py  run_atheris.py  run_libfuzzer.py  setup_msvc.bat
src/pylibmspack/: __init__.py  _cab.c  _libmspack.py  _paths.py  cab.py  chm.py  errors.py  hlp.py  kwaj.py  oab.py  szdd.py
src/pymspack/: _cab.c  cab.py  errors.py
tests/: test_cab.py  test_chm.py  test_fuzz_corpus.py  test_hlp.py  test_kwaj.py  test_oab.py  test_parser_exposure.py  test_paths.py  test_szdd.py
tests/fixtures/: sample.tx_  small_mszip.cab  traversal.cab
