[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylibmspack"
version = "0.4.0"
description = "In-process libmspack bindings for Microsoft CAB, CHM, SZDD, KWAJ, OAB, and HLP LZSS streams"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = [
    "LICENSE",
    "THIRD_PARTY_LICENSES/LGPL-2.1.txt",
    "THIRD_PARTY_LICENSES/NSIS_ZLIB_LICENSE.txt",
    "NOTICE",
]
authors = [
    {name = "Example Author", email = "dev@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/bwhitn/pylibmspack"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15.0",
]
security = [
    "pip-audit>=2.10; python_version >= '3.10'",
]
fuzz = [
    "atheris>=3.0.0; python_version >= '3.11' and platform_system == 'Linux'",
]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "RUF",
]


[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux*"

[tool.cibuildwheel.environment]
PYLIBMSPACK_LIBMSPACK_VERSION = "0.11"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
repair-wheel-command = ""
