[metadata]
name = pymspack
author = Example Author
author_email = dev@example.com
description = In-process libmspack bindings for Microsoft CAB files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/pymspack
license = MIT
license_files =
    LICENSE
    THIRD_PARTY_LICENSES/LGPL-2.1.txt
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C
    Topic :: System :: Archiving

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
pymspack =
    .libs/*
    vendor/*.tar.xz

[options.extras_require]
dev =
    pytest
